# Stackling_Coding_Companion

./: .gitignore  Guide-Dev.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
public/live2d/: manifest.json
public/live2d/moran-hanfu/: moran-hanfu.cdi3.json  moran-hanfu.moc3  moran-hanfu.model3.json  moran-hanfu.physics3.json
scripts/: remove-unused-gh-pages.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent_files.rs  agent_focus.rs  agent_monitor.rs  agent_sessions.rs  agent_sockets.rs  agent_stats.rs  claude_hooks.rs  codex_hooks.rs  credentials.rs  cursor_hooks.rs  hook_health.rs  hook_utils.rs  lib.rs  main.rs  model_chat.rs  uninstall_cleanup.rs  updates.rs
src-tauri/windows/: installer-hooks.nsh
src-vite/: main.tsx
src-vite/features/agent-monitor/: agentMonitor.ts
src-vite/features/info-panel/: ChatView.tsx  CompletionHistoryView.tsx  InfoPanel.tsx  SessionList.tsx  StatsView.tsx  theme.module.css  theme.ts  utils.ts
src-vite/features/live2d-mascot/: Live2DMascot.module.css  Live2DMascot.tsx  Live2DMascotSwitcher.module.css  Live2DMascotSwitcher.tsx  live2dModels.ts
src-vite/features/model-chat/: modelChat.module.css  modelChatStore.ts
src-vite/features/settings/: SettingsPanel.tsx  Toggle.tsx  settingsStore.ts  (+1 more)
src-vite/shared/: appStore.ts  maintenance.ts  notify.ts  updateChecker.ts
src-vite/windows/: ChatHistoryWindow.tsx  ChatInputWindow.tsx  CompletionWindow.tsx  MascotWindow.tsx  PanelWindow.tsx  SettingsWindow.tsx  windowManager.ts
(+7 files in other folders)
