[package]
name = "stackling"
version = "1.0.0"
description = "Stackling Live2D AI coding companion for Windows"
authors = ["kafuu"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
chrono = "0.4"
dirs = "5"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
semver = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2.5.4"

# Windows-only：agent_monitor 模块需要（文件 watcher + Win32 进程/窗口 + CJK 解码）
[target.'cfg(target_os = "windows")'.dependencies]
notify = { version = "6" }
encoding_rs = "0.8"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_Security_Credentials",
] }
